hy (0.11.0-4) UNRELEASED; urgency=medium

  * Fix FTBFS due to rply trying to write to HOME during sphinx-build.
  * Fix build repeatability with proper override_dh_auto_clean.
  * Add "hyc" and "hy2py" as slaves to the "hy" alternative.
  * Add alternatives to python-hy package also (to make testing easier).

 -- Tianon Gravi <tianon@debian.org>  Mon, 16 Nov 2015 09:30:10 -0800

hy (0.11.0-3) unstable; urgency=medium

  * Fix FTBFS by adding python-clint to Build-Depends (Closes: #796434).
    Thanks, Chris!

 -- Tianon Gravi <tianon@debian.org>  Fri, 21 Aug 2015 15:33:29 -0700

hy (0.11.0-1) unstable; urgency=medium

  * Update to 0.11.0 upstream release.

 -- Tianon Gravi <admwiggin@gmail.com>  Wed, 20 May 2015 00:39:58 -0600

hy (0.10.1-2) unstable; urgency=medium

  * Update Vcs-* fields to point to the correct repositoriy.
  * Remove copyninja from Uploaders per request. (Thanks for your help/support!)
  * Use changelog date in man page for reproducible builds (Closes: #782385).

 -- Tianon Gravi <admwiggin@gmail.com>  Tue, 05 May 2015 00:30:14 -0600

hy (0.10.1-1) unstable; urgency=medium

  * Update to 0.10.1 upstream release!

 -- Tianon Gravi <admwiggin@gmail.com>  Fri, 10 Oct 2014 19:35:53 +0000

hy (0.10.0-2) unstable; urgency=medium

  * Add CC0 to debian/copyright, even though they explicitly don't hold
    copyright and is not a license (to make it clear these files aren't covered
    by Expat or any copyright holders).

 -- Paul Tagliamonte <paultag@debian.org>  Tue, 15 Jul 2014 21:57:00 -0400

hy (0.10.0-1) unstable; urgency=medium

  * Initial release (Closes: #731059).

 -- Tianon Gravi <admwiggin@gmail.com>  Tue, 15 Jul 2014 00:29:12 -0400